[package]
authors = ["Preston Garrison III <preston.garrison3@gmail.com>"]
edition = "2021"
name = "std"
resolver = "2"
rust-version = "1.71"
version = "0.1.0"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z" 

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

alloc = ["esp-idf-svc/alloc"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
experimental = ["esp-idf-svc/experimental"]
nightly = ["esp-idf-svc/nightly"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]

[dependencies]
anyhow = "1.0.44"
async-channel = {version = "2.3.1", features = [], default-features = false}
embassy-executor = "0.5.0"
embassy-futures = "0.1.1"
embassy-time = {version = "0.3.0", features = ["generic-queue-8"]}
embedded-svc = "0.27.1"
enumset = "1.1.5"
esp-idf-svc = {version = "0.48", default-features = false}
esp-println = "0.12.0"
limero = {path = "../../zenoh-projects/esp32-limero-embassy"}
log = {version = "0.4", default-features = false}
minicbor = {version = "0.25.1", default-features = false, features = [
  "derive",
  "alloc",
  "half",
]}
# minicbor-ser = {version = "*", default-features = false, features = ["alloc", "alloc"]}
msg = {path = "../../zenoh-projects/msg"}

[build-dependencies]
embuild = "0.31.3"
