[package]
name = "espidf-rust"
version = "0.1.0"
authors = ["lieven <lieven.merckx@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false , features = [] }
esp-idf-hal = { version = "0.43.1", default-features = false , features = [] }
minicbor = { version = "0.21.1", features=["derive","std"] }
cobs={ version = "0.2.3", default_features=false,features = [] }
crc = { version = "3.0.1", features = [] }
esp-wifi = { version = "0.4.0" , features = ["esp32","wifi"]}
esp-hal = { version = "0.16.1" , default_features=false,features = []}
anyhow       = "1.0.81"
embedded-svc = "0.27.1"
shtcx        = "=0.11.0"
toml-cfg     = "0.2.0"
critical-section =  { version = "1.1.2", default-features = false}

[build-dependencies]
embuild  = "=0.31.4"
toml-cfg = "0.2.0"


