[package]
name = "espidf-rust"
version = "0.1.0"
authors = ["lieven <lieven.merckx@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[dependencies]
# esp-hal = { version = "0.16.1", features = ["async","embassy","embassy-time-timg0" ] }
# esp-hal-common = { version="0.15.0" }
esp-hal = { version="0.16.1" , features =["esp32","async","embassy","embassy-time-timg0","embassy-executor-thread"]}
esp-backtrace      = { version = "0.11.1", features = ["esp32", "panic-handler", "exception-handler","println"] }
esp-println = { version = "0.9.1", features = ["esp32"] }
esp-alloc={ version="*" }
embassy-executor = { version = "0.5.0"}
embassy-time = { version = "0.3.0" }
embassy-sync = { version = "0.5.0" }
embedded-hal-async = { version = "1.0.0" } 
embedded-io-async = { version = "0.6.1" }
embedded-io={version="0.6.1"   }
# xtensa-lx={version="0.9.0" ,links = "xtensa-lx"}
static_cell = { version = "2.0.0" }
critical-section ={ version ="1.1.2"}
minicbor = { version = "0.21.1", features=["derive","alloc"] }
cobs={ version = "0.2.3", default_features=false,features = [] }
crc = { version = "3.0.1", features = [] }




