[package]
name = "espidf-rust"
version = "0.1.0"
authors = ["lieven <lieven.merckx@gmail.com>"]
edition = "2021"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"


[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.0", features = [ "esp32","embassy","embassy-time-timg0","embassy-executor-thread","async","log" ] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", version = "0.5.0" }
# 
embassy-executor = { version = "0.5.0"}
embassy-time = { version ="0.3.0", features=["generic-queue"]}
embassy-futures = { version ="*" }

esp-println = { version = "0.9.0", features = ["esp32", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
embedded-io-async={ version ="*"}
esp-wifi = { version = "*", features = [
    "esp32",
    "phy-enable-usb",
    "utils",
    "wifi-default",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
minicbor = { version = "0.21.1", features=["derive","alloc"] }
cobs={ version = "0.2.3", default_features=false,features = [] }
crc = { version = "3.0.1", features = [] }

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
default=["esp32"]
esp32=[]



