[package]
name = "hoverboard-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = "0.19.0"
log ="0.4.14"
tokio-serial = { version = "5.4.4", default-features = false, features = ["libudev"] }
tokio-util = { version = "0.7.11", default-features = false ,features = ["codec"]}
tokio = { version = "1.40.0", default-features = false, features = ["macros", "rt", "process", "time", "fs", "io-util"] }
bytes = { version = "1.7.1", default-features = false}
limero = { path="../limero-linux-tokio"}
mio-serial = { version = "5.0.3", default-features = false, features = ["libudev"]}

[features]
default = []
libudev = ["mio-serial/libudev"]
rt = ["tokio/rt-multi-thread"]
codec = ["tokio-util/codec"]

[dependencies.futures]
version = "0.3"


[dependencies.cfg-if]
version = "1"

[dev-dependencies.tokio]
version = "^1.8"
features = ["macros", "rt", "process", "time", "fs", "io-util"]
default-features = false

[dev-dependencies.env_logger]
version = "0.10.0"
