[package]
name = "udp_broker_lib"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "broker"
path = "src/bin/broker.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
anyhow = "1.0"
socket2 = { version = "0.6.1", features = ["all"] }
dashmap = "6.1.0"
async-trait = "0.1"
minicbor = { version = "2.1.3", features = ["derive", "alloc", "half"] }
env_logger = "0.11.8"
log = "0.4"
chrono ="*"
clap = { version = "4.5.4", features = ["derive"] }

