[package]
name = "mc-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
anyhow = "1.0.82"
tracing-subscriber = "0.3.18"
tokio-util = "0.7.10"
socket2 = "0.6.1"
minicbor = { version = "2.1.3", features = ["derive", "alloc","half"] }
cbor-diag = "0.1.2"
env_logger = "*"
log ="*"
chrono="*"
