[package]
name = "mc-show"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor ="*"
serde_derive="*"
serde_json ="*"
anyhow ="*"
log = "0.4"
env_logger = "0.11.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-util = "0.7.10"
socket2 = "0.6.1"
minicbor = { version = "2.1.3", features = ["derive", "alloc","half"] }
cbor-diag = "0.1.2"
