[package]
name = "mc-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor ="*"
futures = "0.3"
env_logger = "0.11.6"
log = "0.4.14"
anyhow = "1.0.44"
chrono = "0.4.39"
base64 ="*"
once_cell = "1.17.0"
async-trait = "0.1.80"
thiserror = "2.0.12"
