[package]
edition = "2021"
name = "msg"
version = "0.1.0"

[dependencies]
anyhow = {version = "1.0", default-features = false}
log = "0.4"
bitfield = "0.17.0"
byte = {version = "0.2.7"}
cobs = {version = "0.2.3", default-features = false, features = []}
crc = {version = "3.0.1", features = []}
minicbor = {version = "*", default-features = false, features = [
  "derive",
  "alloc",
  "half",
]}
minicbor-derive = {version = "*", default-features = false}
