[package]
edition = "2021"
name = "msg"
version = "0.1.0"

[dependencies]
anyhow = {version = "1.0", default-features = false}
bitfield = "0.17.0"
byte = {version = "0.2.7"}
cobs = {version = "0.2.3", default-features = false, features = []}
crc = {version = "3.0.1", features = []}
log = "0.4"
# memchr = {version = "2.7.4", default-features = false}
minicbor = {version = "0.25.1", default-features = false, features = [
  "derive",
  "alloc",
  "half",
]}
minicbor-derive = {version = "0.15.3", default-features = false}
serde = {version = "1.0.210", default-features = false, features = ["derive","alloc"]}
serde-json-core = {version = "0.6.0", default-features = false,features = ["heapless"]}
const-fnv1a-hash = "1.1.0"

[features]
default = ["cbor"]
json = []
cbor = []

