[package]
name = "prosty"
version = "0.1.0"
edition = "2024"

[[bin]]
name ="mermaid"
path ="src/bin/mermaid.rs"

[dependencies]
protobuf-parser = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tera = "1.20.1"
tera-text-filters = "1.0.0"
anyhow = "1.0.100"
env_logger = "0.11.8"
log = "0.4.29"
clap = { version = "4.5.53", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
fnv = "1.0.7"
convert_case = "0.10.0"
hidapi = "*"
pest = "2.8.4"
pest_derive = "2.8.4"

[build-dependencies]
prost-build = "0.14.1"
