[package]
name = "serial_proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z" # Optimize for size.
lto = true
panic = "abort"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-serial = { version = "*", features = ["libudev"] }
log = "0.4.14"                                           # for logging
simplelog = "*"                                          # for logging
env_logger = "0.11.0"
chrono = "0.4.19"                                        # for time

[cargo]
warning="MESSAGE"