[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4",  default-features = false, features = [] }
minicbor = { version = "*", default-features = false, features=["derive","alloc","half"] }
minicbor-ser = { version = "*", default-features = false,  features=["alloc"]}
serde-json-core="*"
serde = { version = "1.0", default-features = false } # disable std
anyhow = { version = "1.0", default-features = false }

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
opt-level        = 3
lto = 'fat'
overflow-checks  = false
